--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Items/Wifi.PlayListEditor.Items.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Items/Wifi.PlayListEditor.Items.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mp3Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wifi.PlayListEditor.Types\Wifi.PlayListEditor.Types.csproj">
+      <Project>{25f59e2a-bf88-44e5-bc43-f69a0b90286f}</Project>
+      <Name>Wifi.PlayListEditor.Types</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="TagLibSharp">
+      <Version>2.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
