--- a/src/Wifi.PlayListEditor/Wifi.PlayList.Editor.Factories/Wifi.PlayList.Editor.Factories.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayList.Editor.Factories/Wifi.PlayList.Editor.Factories.csproj
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EFA137E5-D958-4454-AF5E-EE1B13A59F55}</ProjectGuid>
+    <ProjectGuid>b79150ba-325c-4901-ad50-fde90719139c</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wifi.PlayListEditor.Repositories</RootNamespace>
-    <AssemblyName>Wifi.PlayListEditor.Repositories</AssemblyName>
+    <RootNamespace>Wifi.PlayList.Editor.Factories</RootNamespace>
+    <AssemblyName>Wifi.PlayList.Editor.Factories</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,39 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System"/>
+    
+    <Reference Include="System.Core"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Data.DataSetExtensions"/>
+    
+    
+    <Reference Include="Microsoft.CSharp"/>
+    
+    <Reference Include="System.Data"/>
+    
+    <Reference Include="System.Net.Http"/>
+    
+    <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="M3URepository.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Wifi.PlayListEditor.Items\Wifi.PlayListEditor.Items.csproj">
-      <Project>{334aef69-1f0a-447e-aca6-61d7ac953619}</Project>
-      <Name>Wifi.PlayListEditor.Items</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Wifi.PlayListEditor.Types\Wifi.PlayListEditor.Types.csproj">
-      <Project>{25f59e2a-bf88-44e5-bc43-f69a0b90286f}</Project>
-      <Name>Wifi.PlayListEditor.Types</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="PlaylistsNET">
-      <Version>1.2.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.IO.Abstractions">
-      <Version>17.2.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers">
-      <Version>17.2.3</Version>
-    </PackageReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-</Project>
+ </Project>
