--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories.Test/Wifi.PlayListEditor.Repositories.Test.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories.Test/Wifi.PlayListEditor.Repositories.Test.csproj
@@ -54,6 +54,12 @@
     <PackageReference Include="NUnit3TestAdapter">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="System.IO.Abstractions">
+      <Version>17.2.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers">
+      <Version>17.2.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wifi.PlayListEditor.Repositories\Wifi.PlayListEditor.Repositories.csproj">
