--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories/Wifi.PlayListEditor.Repositories.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories/Wifi.PlayListEditor.Repositories.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Json\ItemEntity.cs" />
+    <Compile Include="Json\JsonExtensions.cs" />
+    <Compile Include="Json\JsonRepository.cs" />
+    <Compile Include="Json\PlaylistEntity.cs" />
     <Compile Include="M3URepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -55,6 +59,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
+    </PackageReference>
     <PackageReference Include="PlaylistsNET">
       <Version>1.2.1</Version>
     </PackageReference>
@@ -65,5 +72,6 @@
       <Version>17.2.3</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
