--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Types/Wifi.PlayListEditor.Types.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Types/Wifi.PlayListEditor.Types.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IFileDescription.cs" />
     <Compile Include="IPlaylist.cs" />
     <Compile Include="IPlaylistItem.cs" />
+    <Compile Include="IPlaylistFactory.cs" />
     <Compile Include="IPlaylistItemFactory.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IRepositoryFactory.cs" />
