--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Items/Wifi.PlayListEditor.Items.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Items/Wifi.PlayListEditor.Items.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageItem.cs" />
     <Compile Include="Mp3Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,6 +53,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ImageProcessor">
+      <Version>2.9.1</Version>
+    </PackageReference>
     <PackageReference Include="TagLibSharp">
       <Version>2.3.0</Version>
     </PackageReference>
