--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories.Test/Wifi.PlayListEditor.Repositories.Test.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories.Test/Wifi.PlayListEditor.Repositories.Test.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonRepositoryTest.cs" />
     <Compile Include="M3URepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,7 +53,7 @@
       <Version>3.13.3</Version>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter">
-      <Version>4.3.0</Version>
+      <Version>4.2.1</Version>
     </PackageReference>
     <PackageReference Include="System.IO.Abstractions">
       <Version>17.2.3</Version>
