RepositoryTest started (playlistFactory fehlt überal im M3U)

--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories/Wifi.PlayListEditor.Repositories.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Repositories/Wifi.PlayListEditor.Repositories.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Json\ItemEntity.cs" />
     <Compile Include="Json\JsonExtensions.cs" />
-    <Compile Include="Json\JsonRepository.cs" />
+    <Compile Include="JsonRepository.cs" />
     <Compile Include="Json\PlaylistEntity.cs" />
     <Compile Include="M3URepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
