--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Types/Wifi.PlayListEditor.Types.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.Types/Wifi.PlayListEditor.Types.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IPlaylistItemFactory.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IRepositoryFactory.cs" />
+    <Compile Include="IStorageDescription.cs" />
     <Compile Include="Playlist.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
