--- a/src/Wifi.PlaylistEditor.Server/Wifi.PlaylistEditor.Repositories/Wifi.PlaylistEditor.Repositories.csproj
+++ b/src/Wifi.PlaylistEditor.Server/Wifi.PlaylistEditor.Repositories/Wifi.PlaylistEditor.Repositories.csproj
@@ -9,7 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="PlaylistsNET" Version="1.2.1" />
-    <PackageReference Include="System.IO.Abstractions" Version="17.2.26" />
+    <PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="17.2.3" />
   </ItemGroup>
 
   <ItemGroup>
