--- a/src/Wifi.PlaylistEditor.Server/Wifi.PlaylistEditor.Repository.Test/Wifi.PlaylistEditor.Repository.Test.csproj
+++ b/src/Wifi.PlaylistEditor.Server/Wifi.PlaylistEditor.Repository.Test/Wifi.PlaylistEditor.Repository.Test.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Wifi.PlaylistEditor.Repositories\Wifi.PlaylistEditor.Repositories.csproj" />
+    <ProjectReference Include="..\Wifi.PlaylistEditor.Server.Items\Wifi.PlaylistEditor.Items.csproj" />
     <ProjectReference Include="..\Wifi.PlaylistEditor.Server.Types\Wifi.PlaylistEditor.Types.csproj" />
   </ItemGroup>
 
