Dependency Injection implementiert

--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.UI/Wifi.PlayListEditor.UI.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.UI/Wifi.PlayListEditor.UI.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DummyDataPrivider.cs" />
     <Compile Include="frm_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +111,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\noImageAvailable.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Autofac">
+      <Version>6.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
