--- a/src/Wifi.PlaylistEditor.Server/Wifi.PlayListEditor.Service/appsettings.json
+++ b/src/Wifi.PlaylistEditor.Server/Wifi.PlayListEditor.Service/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "PlaylistDbSettings": {
+    "ConnectionString": "mongodb://admin:password@localhost:27017",
+    "DatabaseName": "playlistDb",
+    "CollectionName": "playlists"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
