--- a/src/Wifi.PlayListEditor/Wifi.PlayListEditor.UI/Wifi.PlayListEditor.UI.csproj
+++ b/src/Wifi.PlayListEditor/Wifi.PlayListEditor.UI/Wifi.PlayListEditor.UI.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DummyDataPrivider.cs" />
+    <Compile Include="DummyItem.cs" />
     <Compile Include="frm_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +68,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
+    <Compile Include="RestModels\Playlist.cs" />
+    <Compile Include="RestModels\PlaylistInfo.cs" />
+    <Compile Include="RestModels\PlaylistItem.cs" />
+    <Compile Include="RestModels\PlaylistList.cs" />
     <EmbeddedResource Include="frm_Main.resx">
       <DependentUpon>frm_Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +120,9 @@
   <ItemGroup>
     <PackageReference Include="Autofac">
       <Version>6.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
